SVN
- Improve Ingres library and header detection
- Add support for the null clause used in Ingres 9.1.x (and earlier)
- Change status to Beta

version 1.3.0
- Add quote_column_names() for quoting of table and column names. Required
  for the ActiveRecord base unit tests
- Fix data truncation for the ActiveRecord :text type
- Add support for Ingres datatypes float4, float8, money, decimal, bigint,
  and ANSI date/time/timestamp.
- Add support in ingres_adapter.rb for Rails migrations
- Restrict tables() to non-system tables

version 1.2.2
- Add an ascii README file for systems without access to a browser
- Add TODO.txt show show areas that require attention
- Add missing GPL header text to ingres_adapter.rb
- Fix quote() in ingres_adapater.rb to use the class of variable rather than
  the equivalent Ingres column type.
- Fix segvio in Ingres Ruby driver when fetching char/varchar with data
  longer than 4074 bytes.

version 1.2.1
- Initial release

/*
vim: ts=4 sw=4 expandtab
$Id$
*/