@@ -1,4 +1,5 @@
 SVN
+- CM_AttrTab should be defined as an extern
 - Improve Ingres library and header detection
 - Add support for the null clause used in Ingres 9.1.x (and earlier)
 - Change status to Beta
